--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
+    "bootstrap": "^4.5.3",
     "datatables.net-dt": "^1.10.23",
     "jquery": "^3.5.1",
     "lodash": "^4.17.20",
+    "popper.js": "^1.16.1",
     "react": "^17.0.1",
+    "react-collapsing-table": "^1.0.3",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
